--- a/css/main.css
+++ b/css/main.css
@@ -1527,6 +1527,7 @@ header .header-logo a {
   height: 100%;
   opacity: .2;
   background-color: #19191b;
+  background-image: url(../images/loquiloqui.jpg);
 }
 
 .home-content-table {
